# base64_encode_decode

./: .gitignore  CMakeLists.txt  README.md  b64tool  ldfjsf  main.cpp
include/: base64.hpp  cli_parser.hpp
src/: base64.cpp  base64.hpp  cli_parser.cpp  main.cpp
test/: tests.cpp
